--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "leaflet": "^1.0.2",
     "lodash": "^4.16.1",
+    "ng-sidebar": "^3.4.3",
     "rxjs": "^5.0.1",
     "zone.js": "^0.7.2"
   },
