--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/compiler-cli": "^2.4.2",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "^2.0.0",
+    "@angular/animations": "^4.0.2",
+    "@angular/common": "^4.0.2",
+    "@angular/compiler": "^4.0.2",
+    "@angular/compiler-cli": "^4.0.2",
+    "@angular/core": "^4.0.2",
+    "@angular/forms": "^4.0.2",
+    "@angular/http": "^4.0.2",
     "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
-    "@angular/router": "^3.0.0",
+    "@angular/platform-browser": "^4.0.2",
+    "@angular/platform-browser-dynamic": "^4.0.2",
+    "@angular/platform-server": "^4.0.2",
+    "@angular/router": "^4.0.2",
     "@angularclass/api": "^2.5.6",
     "@types/leaflet": "^1.0.45",
     "ag-grid": "^7.1.0",
@@ -28,8 +30,9 @@
     "hammerjs": "^2.0.8",
     "leaflet": "^1.0.2",
     "lodash": "^4.16.1",
-    "ng-sidebar": "^3.4.3",
+    "ng-sidebar": "^4.1.0",
     "rxjs": "^5.0.1",
+    "typescript": "^2.2.2",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
