--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@angular/platform-server": "^4.0.2",
     "@angular/router": "^4.0.2",
     "@angularclass/api": "^2.5.6",
+    "@types/geojson": "^1.0.2",
     "@types/leaflet": "^1.0.45",
     "ag-grid": "^7.1.0",
     "ag-grid-ng2": "^7.1.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "leaflet": "^1.0.2",
+    "leaflet": "^1.0.3",
     "lodash": "^4.16.1",
     "ng-sidebar": "^4.1.0",
     "rxjs": "^5.0.1",
