--- a/package.json
+++ b/package.json
@@ -25,20 +25,24 @@
     "@angularclass/api": "^2.5.6",
     "@types/geojson": "^1.0.2",
     "@types/leaflet": "^1.0.45",
+    "@types/underscore": "^1.8.0",
     "ag-grid": "^7.1.0",
     "ag-grid-ng2": "^7.1.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
     "leaflet": "^1.0.3",
     "lodash": "^4.16.1",
     "ng-sidebar": "^4.1.0",
     "rxjs": "^5.0.1",
     "typescript": "^2.2.2",
-    "zone.js": "^0.7.2"
+    "underscore": "^1.8.3",
+    "zone.js": "^0.8.10"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.33",
     "@types/hammerjs": "^2.0.34",
+    "@types/jquery": "^2.0.43",
     "@types/lodash": "^4.14.35",
     "@types/node": "^6.0.39",
     "awesome-typescript-loader": "3.0.0-beta.10",
